--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,5 @@
 .header {
-
-
-    background-color: black;
+    background-color: hsl(0, 36%, 5%);
     color: rgb(111, 201, 111);
     padding: 5px;
 
