--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,5 +1,5 @@
 .cart {
-    background-color: rgb(65, 60, 60);
+    background-color: hsl(0, 36%, 5%);
     margin-left: 20px;
     margin-right: 20px;
     padding: 20px;
