--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -2,13 +2,29 @@
     width: 100px;
     height: 100px;
     border: 1px solid green;
+    border-radius: 50%;
+    padding: 5px;
+    margin-top: 20px;
 }
 
 .btn-regular {
-    background-color: chartreuse;
+    background-color: rgb(174, 247, 101);
     width: 120px;
     height: 30px;
-    border: 1px solid green;
+    border: 1px solid rgb(201, 214, 201);
     border-radius: 5px;
     margin-bottom: 10px;
+    font-weight: 700;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.btn-regular:hover {
+    background-color: cornsilk;
+}
+
+.card {
+
+    background-color: hsl(0, 36%, 5%);
+    border-radius: 20px;
 }
