--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,7 +1,7 @@
 .shop-container {
     display: grid;
     grid-template-columns: 3fr 1fr;
-    background-color: black;
+    background-color: rgb(65, 60, 60);
     color: lightgrey;
     padding-top: 30px;
 
@@ -12,4 +12,5 @@
     margin: 5px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
 }
